--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"base-dev": "pnpm clean:bundle && turbo ready && turbo watch dev",
 		"dev": "pnpm set-global-env CLI_CEB_DEV=true && pnpm base-dev",
 		"dev:firefox": "pnpm set-global-env CLI_CEB_DEV=true CLI_CEB_FIREFOX=true && pnpm base-dev",
+		"dev:inspector": "vite --config vite.config.dev.mts",
 		"zip": "pnpm build && pnpm -F zipper zip",
 		"zip:firefox": "pnpm build:firefox && pnpm -F zipper zip",
 		"e2e": "pnpm zip && turbo e2e",
@@ -52,7 +53,9 @@
 		"@types/react": "^19.1.5",
 		"@types/react-dom": "^19.1.5",
 		"@typescript-eslint/parser": "^8.32.1",
+		"@vitejs/plugin-react-swc": "^3.9.0",
 		"autoprefixer": "^10.4.21",
+		"code-inspector-plugin": "^1.0.4",
 		"cross-env": "^7.0.3",
 		"deepmerge": "^4.3.1",
 		"eslint": "^9.27.0",
