--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,12 +10,16 @@
 	],
 	"types": "index.ts",
 	"main": "dist/index.js",
+	"exports": {
+		".": "./dist/index.js",
+		"./global.css": "./dist/global.css"
+	},
 	"scripts": {
 		"clean:bundle": "rimraf dist",
 		"clean:node_modules": "pnpx rimraf node_modules",
 		"clean:turbo": "rimraf .turbo",
 		"clean": "pnpm clean:bundle && pnpm clean:node_modules && pnpm clean:turbo",
-		"ready": "tsc -b && tsc-alias -p tsconfig.json",
+		"ready": "tsc -b && tsc-alias -p tsconfig.json && cp lib/global.css dist/",
 		"lint": "eslint .",
 		"lint:fix": "pnpm lint --fix",
 		"format": "prettier . --write --ignore-path ../../.prettierignore",
