--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 **/dist
 **/build
 **/dist-zip
+**/dist-signed
 chrome-extension/manifest.js
 chrome-extension/pre-build.tsconfig.tsbuildinfo
 tsconfig.tsbuildinfo
