--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
 		"copy-env": "bash bash-scripts/copy_env.sh",
 		"set-global-env": "bash bash-scripts/set_global_env.sh",
 		"module-manager": "pnpm -F module-manager start",
-		"postinstall": "pnpm copy-env"
+		"postinstall": "pnpm copy-env",
+		"publish:chrome": "tsx scripts/publish-chrome.ts",
+		"publish:firefox": "tsx scripts/publish-firefox.ts",
+		"release": "semantic-release"
 	},
 	"dependencies": {
 		"react": "^19.1.0",
@@ -47,6 +50,10 @@
 		"@eslint/compat": "^1.2.9",
 		"@eslint/eslintrc": "^3.3.1",
 		"@eslint/js": "^9.27.0",
+		"@semantic-release/changelog": "^6.0.3",
+		"@semantic-release/exec": "^7.1.0",
+		"@semantic-release/git": "^10.0.1",
+		"@semantic-release/github": "^11.0.3",
 		"@types/chrome": "^0.0.323",
 		"@types/eslint-plugin-jsx-a11y": "^6.10.0",
 		"@types/node": "^22.15.21",
@@ -55,6 +62,7 @@
 		"@typescript-eslint/parser": "^8.32.1",
 		"@vitejs/plugin-react-swc": "^3.9.0",
 		"autoprefixer": "^10.4.21",
+		"chrome-webstore-upload-cli": "^3.3.2",
 		"code-inspector-plugin": "^1.0.4",
 		"cross-env": "^7.0.3",
 		"deepmerge": "^4.3.1",
@@ -79,6 +87,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"rimraf": "^6.0.1",
 		"run-script-os": "^1.1.6",
+		"semantic-release": "^24.2.7",
 		"tailwindcss": "^3.4.17",
 		"tslib": "^2.8.1",
 		"tsx": "^4.19.4",
@@ -86,7 +95,8 @@
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.32.1",
 		"vite": "^6.3.5",
-		"vite-plugin-node-polyfills": "^0.23.0"
+		"vite-plugin-node-polyfills": "^0.23.0",
+		"web-ext": "^8.9.0"
 	},
 	"lint-staged": {
 		"*.{js,jsx,ts,tsx}": [
