--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,8 +1,25 @@
 {
   "branches": ["main"],
   "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "preset": "conventionalcommits",
+        "releaseRules": [
+          {"type": "feat", "release": "minor"},
+          {"type": "fix", "release": "patch"},
+          {"type": "perf", "release": "patch"},
+          {"breaking": true, "release": "major"},
+          {"revert": true, "release": "patch"}
+        ]
+      }
+    ],
+    [
+      "@semantic-release/release-notes-generator",
+      {
+        "preset": "conventionalcommits"
+      }
+    ],
     "@semantic-release/changelog",
     [
       "@semantic-release/npm",
@@ -23,7 +40,8 @@
           "package.json",
           "pnpm-lock.yaml",
           "chrome-extension/manifest.json",
-          "CHANGELOG.md"
+          "CHANGELOG.md",
+          "**/package.json"
         ],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
@@ -34,7 +52,8 @@
         "assets": [
           {
             "path": "dist-zip/extension-*.zip",
-            "label": "Chrome Extension (${nextRelease.version})"
+            "label": "Chrome Extension v${nextRelease.version}",
+            "name": "whatsmytoken-v${nextRelease.version}.zip"
           }
         ]
       }
