--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,6 +9,8 @@
           {"type": "feat", "release": "minor"},
           {"type": "fix", "release": "patch"},
           {"type": "perf", "release": "patch"},
+          {"type": "docs", "release": false},
+          {"scope": "no-release", "release": false},
           {"breaking": true, "release": "major"},
           {"revert": true, "release": "patch"}
         ]
@@ -17,7 +19,19 @@
     [
       "@semantic-release/release-notes-generator",
       {
-        "preset": "conventionalcommits"
+        "preset": "conventionalcommits",
+        "presetConfig": {
+          "types": [
+            {"type": "feat", "section": "✨ Features"},
+            {"type": "fix", "section": "🐛 Bug Fixes"},
+            {"type": "perf", "section": "⚡ Performance"},
+            {"type": "docs", "section": "📚 Documentation"},
+            {"type": "style", "section": "💅 Styles"},
+            {"type": "refactor", "section": "♻️ Code Refactoring"},
+            {"type": "test", "section": "✅ Tests"},
+            {"type": "chore", "section": "🔧 Chores"}
+          ]
+        }
       }
     ],
     "@semantic-release/changelog",
