--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"autoprefixer": "^10.4.21",
 		"chrome-webstore-upload-cli": "^3.3.2",
 		"code-inspector-plugin": "^1.0.4",
+		"conventional-changelog-conventionalcommits": "^9.1.0",
 		"cross-env": "^7.0.3",
 		"deepmerge": "^4.3.1",
 		"eslint": "^9.27.0",
