--- a/.releaserc.json
+++ b/.releaserc.json
@@ -57,7 +57,8 @@
           "CHANGELOG.md",
           "**/package.json"
         ],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}",
+        "gitCommitOptions": "--no-verify"
       }
     ],
     [
