--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,9 @@ jobs:
         uses: pnpm/action-setup@v4
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        env:
+          HUSKY: 0
+        run: pnpm install --frozen-lockfile --ignore-scripts
 
       - name: Build dependencies for type checking
         run: pnpm turbo ready
