--- a/.releaserc.json
+++ b/.releaserc.json
@@ -55,10 +55,12 @@
           "pnpm-lock.yaml",
           "chrome-extension/manifest.json",
           "CHANGELOG.md",
-          "**/package.json"
+          "chrome-extension/package.json",
+          "packages/*/package.json",
+          "pages/*/package.json",
+          "tests/e2e/package.json"
         ],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}",
-        "gitCommitOptions": "--no-verify"
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
     [
