--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --ignore-scripts
 
+      - name: Setup environment file
+        run: cp .env.example .env
+
       - name: Build dependencies for type checking
         run: pnpm turbo ready
 
@@ -71,6 +74,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile --ignore-scripts
+
+      - name: Setup environment file
+        run: cp .env.example .env
 
       - name: Check next version
         id: check-version
